@@ -11,6 +11,7 @@
   * Added support for libnova version 0.15.0
   * Improved support for STEPPED observations in lsl.common.sdf
   * Made the TBW read-out duration calculation consistent with the current version of MCS
+  * Changed the allowed TBN tuning from 10 to 88 MHz to 5 to 93 MHz
 
 0.5.3
   * Changed the DROS spectrometer reader to match the new format
